
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 char* index (char*,char) ;
 int stderr ;
 int strcpy (char*,char*) ;

void
parse_url (char *url, char *target)
{
 char *ptr;

 strcpy (target, url);
 if (!(ptr = index (target, '/'))){
  fprintf (stderr, "invalid url. specify the script name on the target server too\n");
  exit (1);
 }
 *ptr = '\0';
}
