; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_220.c_parse_url.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_220.c_parse_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [63 x i8] c"invalid url. specify the script name on the target server too\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @parse_url(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @strcpy(i8* %6, i8* %7)
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @index(i8* %9, i8 signext 47)
  store i8* %10, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @exit(i32 1) #3
  unreachable

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  store i8 0, i8* %17, align 1
  ret void
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i8* @index(i8*, i8 signext) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
